# nfiq

./: CMakeLists.txt  main.cpp  nfiqlib.c  nfiqlib.h  wsqlib.c  wsqlib.h
include/: an2k.h  little.h
